feat: new proto fields added

--- a/app/client/views/index.html
+++ b/app/client/views/index.html
@@ -12,6 +12,8 @@
                 <p>{{.Id}}</p>
                 <p>{{.Title}}</p>
                 <p>{{.Url}}</p>
+                <p>{{.Description}}</p>
+                <img src="{{.Image}}" alt="">
             </div>
             <br>
         {{end}}
