feat: html & css added

--- a/app/client/src/views/index.html
+++ b/app/client/src/views/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/index.css">
     <title>Index</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
                 <p>{{.Title}}</p>
                 <p>{{.Url}}</p>
                 <p>{{.Description}}</p>
-                <img src="{{.Image}}" alt="">
+                <img src="{{.Image}}" alt="preview image">
             </div>
             <br>
         {{end}}
