--- a/app/client/src/views/result.html
+++ b/app/client/src/views/result.html
@@ -22,7 +22,7 @@
             <form action="/search/result" method="post">
                 <div class="cp_iptxt">
                     <label class="ef">
-                    <input type="text" placeholder="keywords" name="keywords" id="keywords">
+                    <input type="text" placeholder="Keywords" name="keywords" id="keywords">
                     </label>
                     <input type="submit" value="search" class="button">
                 </div>
