--- a/app/client/src/css/search.css
+++ b/app/client/src/css/search.css
@@ -18,14 +18,14 @@
 	padding: 0.3em;
 	transition: 0.3s;
 	letter-spacing: 1px;
-	color: white;
+	color: #ffffff;
 	border: none;
 	border-bottom: 2px solid #1b2538;
 	background: transparent;
 }
 
 .ef input[type='text']:focus {
-	border-bottom: 2px solid white;
+	border-bottom: 2px solid #ffffff;
 	outline: none;
 }
 
