--- a/app/client/src/views/delete.html
+++ b/app/client/src/views/delete.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/img/favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/sanitize.css">
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/delete.css">
-    <title>Delete</title>
+    <title>tipstocks</title>
 </head>
 <body>
     <div class="menubar">
